--- a/PixelPicker/PixelPicker/MainWindow.xaml
+++ b/PixelPicker/PixelPicker/MainWindow.xaml
@@ -1,10 +1,14 @@
 ﻿<Window x:Class="PixelPicker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
+        xmlns:helpers="clr-namespace:PixelPicker.Helpers"
         Title="PixelPicker"
-         x:Name="root"
+        x:Name="root"
         >
     <Grid>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.8*"></ColumnDefinition>
             <ColumnDefinition Width="0.2*"></ColumnDefinition>
@@ -14,7 +18,11 @@
             <RowDefinition Height="0.9*"></RowDefinition>
 
         </Grid.RowDefinitions>
-        <Image x:Name="currentImage" Source="{Binding CurrentImage}" Margin="20" Grid.RowSpan="2"></Image>
+        <Image x:Name="currentImage" Source="{Binding CurrentImage}" Margin="20" Grid.RowSpan="2" >
+            <i:Interaction.Behaviors>
+                <helpers:MouseDownToCommandBehavior  MouseDownCommand="{Binding MouseDownCommand}"></helpers:MouseDownToCommandBehavior>
+            </i:Interaction.Behaviors>
+        </Image>
         <Rectangle Fill="{Binding CurrentColor}" Grid.Column="1"></Rectangle>
         <ListBox Grid.Row="1" ItemsSource="{Binding ImageUrls}" Grid.Column="1" ></ListBox>
     </Grid>
