--- a/PixelPicker/PixelPicker/App.xaml
+++ b/PixelPicker/PixelPicker/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="PixelPicker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm="clr-namespace:PixelPicker.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <vm:MainViewModel x:Key="MainViewModel"></vm:MainViewModel>
     </Application.Resources>
 </Application>
