--- a/PixelPicker/PixelPicker/MainWindow.xaml
+++ b/PixelPicker/PixelPicker/MainWindow.xaml
@@ -10,20 +10,22 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.8*"></ColumnDefinition>
-            <ColumnDefinition Width="0.2*"></ColumnDefinition>
+            <ColumnDefinition Width="0.7*"></ColumnDefinition>
+            <ColumnDefinition Width="0.3*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"></RowDefinition>
             <RowDefinition Height="0.1*"></RowDefinition>
             <RowDefinition Height="0.9*"></RowDefinition>
 
         </Grid.RowDefinitions>
-        <TextBox Text="{Binding ImageLinks, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
-        <Image x:Name="currentImage" Source="{Binding CurrentImage}" Margin="20" Grid.Row="1" >
+        <TextBox Text="{Binding ImageLinks, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.RowSpan="2"></TextBox>
+        <Image x:Name="currentImage" Source="{Binding CurrentImage}" Margin="20" Grid.Row="2" >
             <i:Interaction.Behaviors>
                 <helpers:GetPixelCommandBehavior  GetPixelCommand="{Binding GetPixelCommand}"></helpers:GetPixelCommandBehavior>
             </i:Interaction.Behaviors>
         </Image>
+       
         <Rectangle Fill="{Binding CurrentBrush}" Grid.Column="1"></Rectangle>
         <StackPanel  Grid.Column="1" HorizontalAlignment="Left">
             <TextBlock Text="{Binding CurrentColor.Red, StringFormat=Red: {0}}"></TextBlock>
@@ -35,25 +37,26 @@
             <TextBlock Text="{Binding CurrentColor.Saturation, StringFormat=Saturation: {0:P2}}"></TextBlock>
             <TextBlock Text="{Binding CurrentColor.Luminosity, StringFormat=Luminosity: {0:P2}}"></TextBlock>
         </StackPanel>
-        <!--<ScrollViewer>-->
-        <!--<StackPanel  >
-                <TextBlock Text="{Binding CurrentColor.Red, StringFormat=Red: {0}}"></TextBlock>
-                <TextBlock Text="{Binding CurrentColor.Green, StringFormat=Green: {0}}"></TextBlock>
-                <TextBlock Text="{Binding CurrentColor.Blue, StringFormat=Blue: {0}}"></TextBlock>
-
-                <TextBlock Text="{Binding CurrentColor.Hue, StringFormat=Hue: {0}}"></TextBlock>
-                <TextBlock Text="{Binding CurrentColor.Saturation, StringFormat=Saturation: {0:P2}}"></TextBlock>
-                <TextBlock Text="{Binding CurrentColor.Luminosity, StringFormat=Luminosity: {0:P2}}"></TextBlock>-->
-
-        <ListBox ItemsSource="{Binding ImageUrls}" SelectedItem="{Binding SelectedImageUrl, Mode=TwoWay}"  Grid.Row="1"  Grid.Column="1" >
+     
+        <ListBox ItemsSource="{Binding ImageUrls}" SelectedItem="{Binding SelectedImageUrl, Mode=TwoWay}"  Grid.Row="2"  Grid.Column="1" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Image Source="{Binding}" Stretch="Uniform" Width="200"></Image>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <!--</StackPanel>-->
-        <!--</ScrollViewer>-->
+        <ListBox ItemsSource="{Binding ColorPallete}"  Grid.Row="1" Grid.Column="1" VerticalAlignment="Top"  >
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"></StackPanel>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Rectangle Fill="{Binding}" Width="22" Height="22"></Rectangle>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
     </Grid>
 </Window>
